# parse-blocked-sites

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  entrypoint.sh  main.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_22_1123-326ad90a1c1e_create_damain_table.py  2025_10_22_1146-aece4fcc2d4e_create_domain_logs_table.py  2025_10_23_1647-603c9f6834b5_add_unique_constraint_on_domain_name_.py  2025_10_23_1744-0d777eac4398_add_column_block_list_to_domainlog_table.py  2025_10_24_0049-55c7fc341421_add_atributs_to_log_status_enum.py  2025_11_05_1250-746a8b40f579_fix_unique_constraint_on_domains.py  2025_11_05_1324-512142016519_remove_unique_constraint_on_domains.py
backend/auto_loader/parse_domain/: loader_parse_domain.py
backend/celery/: celery_app.py
backend/config/: __init__.py  config.py  logger.py
backend/models/: __init__.py  base.py  domain.py  domain_log.py
backend/parses/: parse_ban_site.py
backend/repositories/: __init__.py  base.py  domain.py  domain_log.py
backend/routers/: __init__.py  base.py  dependencies.py  domain.py  domain_search.py  file_search.py  history.py
backend/schemas/: domain.py  domain_log.py
backend/services/: advertising_service.py  base_parse_service.py  base_service.py  domain_log_service.py  domain_service.py  excel_service.py  parse_service.py  website_service.py
backend/static/css/: style.css
backend/templates/: base.html  domain.html  domain_search.html  file_search.html  history.html
backend/utils/: __init__.py  convert_date.py  profile_decorator.py
(+12 files in other folders)
