[tool.poetry]
name = "parse-blocked-sites"
version = "0.1.0"
description = ""
authors = ["Ihor", "il.cegelnik@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
beautifulsoup4 = ">=4.14.2,<5.0.0"
httpx = ">=0.28.1,<0.29.0"
pydantic = ">=2.12.3,<3.0.0"
pydantic-settings = ">=2.11.0,<3.0.0"
aiodns = ">=3.5.0,<4.0.0"
aiofiles = ">=25.1.0,<26.0.0"
celery = ">=5.5.3,<6.0.0"
flower = ">=2.0.1,<3.0.0"
redis = ">=6.4.0,<7.0.0"
uvicorn = ">=0.38.0,<0.39.0"
fastapi = ">=0.119.1,<0.120.0"
orjson = ">=3.11.3,<4.0.0"
jinja2 = ">=3.1.6,<4.0.0"
sqlalchemy = { version = ">=2.0.44,<3.0.0", extras = ["asyncio"] }
asyncpg = ">=0.30.0,<0.31.0"
alembic = ">=1.17.0,<2.0.0"
inflect = ">=7.5.0,<8.0.0"
python-multipart = ">=0.0.20,<0.0.21"
openpyxl = ">=3.1.5,<4.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.9.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"